# pink-telegram-transcriber

./: .env.example  .gitignore  README.md  pyproject.toml
src/pink_telegram_transcriber/: __init__.py  bot.py  config.py  transcriber.py
src/pink_telegram_transcriber/daemon/: __init__.py  singleton.py
